add sunday task

--- a/thursday_3_11/task1.html
+++ b/thursday_3_11/task1.html
@@ -7,8 +7,11 @@
     <title>task1</title>
 </head>
 <body>
-    
-      
+
+    <!-- Write an if statement to display "Hello World" if x is greater than y, otherwise alert "Goodbye".
+y and x depend on prompt
+📌 the result should appear in alert,console.log, HTML page
+       -->
         <script src="task1.js"></script>
 </body>
 </html>
