--- a/thursday_3_11/task2.html
+++ b/thursday_3_11/task2.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     
-      
+    <!-- Challenge #2: Ask the user to enter 3 inputs, the first one is for operation and the others to enter 2 numbers,
+    if the operation is "+" then add the input two number
+    if the operation is "-" then subtract the input by two number
+    if the operation is "*" then multiply the input  by two number
+    if the operation is "/" then divide the input  by two number
+     the result should appear in console.log, HTML page should show the operation and the two numbers. -->
+
+
         <script src="task2.js"></script>
 </body>
 </html>
