--- a/thursday_3_11/task3.html
+++ b/thursday_3_11/task3.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     
+    <!-- Task one: You should create a new external file with .js extension that includes if statements with marks program:
+    If the mark is less than 50 the mark will be FAIL, if the mark is between 50 and 59 the mark will be D, if the mark is between 60 and 69 the mark will be C, if the mark is between 70 and 79 the mark will be B, if the mark is between 80 and 89 the mark will be A, if the mark is between 90 and 100 the mark will be A+  -->
+
       
         <script src="task3.js"></script>
 </body>
