--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
     <a href="./thursday_3_11/task1.html">task 1</a>
     <a href="./thursday_3_11/task2.html">task 2</a>
     <a href="./thursday_3_11/task3.html">task 3</a>
+    <hr>
+    <h1>sunday 6-11</h1>
+    <a href="./sunday_6_11/task1.html">task 1</a>
+    <a href="./sunday_6_11/task2.html">task 2</a>
+    <a href="./sunday_6_11/task3.html">task 3</a>
+
 </body>
 </html>
