add monday task

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             color: red;
             font-size: 1.5em;
         }
+        a:hover{
+            color: blue;
+            transition: 0.7s;
+        }
         h1 {
             font-weight: bold;
         }
@@ -26,6 +30,10 @@
     <a href="./sunday_6_11/task1.html">task 1</a>
     <a href="./sunday_6_11/task2.html">task 2</a>
     <a href="./sunday_6_11/task3.html">task 3</a>
+    <hr>
+    <h1>monday 7-11</h1>
+    <a href="./monday_7_11/task1.html">Function chalenge</a>
+    
 
 </body>
 </html>
