--- a/monday_7_11/task1.html
+++ b/monday_7_11/task1.html
@@ -20,7 +20,7 @@
 <body>
     
     <h3>All challenges are inside the link</h3>
-    <a href="All challenges are inside the link">function chalenge</a>
+    <a href="https://github.com/MohammadAlnuqeiti/JavaScript_solution">function chalenge</a>
     <script src="./task1.js"></script>
 </body>
 </html>
