edit monday task

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <a href="./sunday_6_11/task3.html">task 3</a>
     <hr>
     <h1>monday 7-11</h1>
-    <a href="./monday_7_11/task1.html">Function chalenge</a>
+    <a href="./monday_7_11/task1.html">Function challenge</a>
     
 
 </body>
