--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <hr>
     <h1>monday 7-11</h1>
     <a href="./monday_7_11/task1.html">Function challenge</a>
+    <hr>
+    <h1>thusday 7-11</h1>
+    <a href="./thusday_8_11/task1.html">Array challenge</a>
     
 
 </body>
