--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
     <h1>monday 7-11</h1>
     <a href="./monday_7_11/task1.html">Function challenge</a>
     <hr>
-    <h1>thusday 7-11</h1>
+    <h1>thusday 8-11</h1>
     <a href="./thusday_8_11/task1.html">Array challenge</a>
-    
+    <hr>
+    <h1>wednesday 9-11</h1>
+    <a href="./Wednesday_9_11/task1.html">task 1</a>
+    <a href="./Wednesday_9_11/task2.html">task 2</a>
+    <a href="./Wednesday_9_11/task3.html">task 3</a>
+    <a href="./Wednesday_9_11/task4.html">task 4</a>
 
 </body>
 </html>
