--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <a href="./thusday_8_11/task1.html">Array challenge</a>
     <hr>
     <h1>wednesday 9-11</h1>
-    <a href="./Wednesday_9_11/task1.html">task 1</a>
-    <a href="./Wednesday_9_11/task2.html">task 2</a>
-    <a href="./Wednesday_9_11/task3.html">task 3</a>
-    <a href="./Wednesday_9_11/task4.html">task 4</a>
+    <a href="./wednesday_9_11/task1.html">task 1</a>
+    <a href="./wednesday_9_11/task2.html">task 2</a>
+    <a href="./wednesday_9_11/task3.html">task 3</a>
+    <a href="./wednesday_9_11/task4.html">task 4</a>
 
 </body>
 </html>
