--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
     <a href="./wednesday_9_11/task2.html">task 2</a>
     <a href="./wednesday_9_11/task3.html">task 3</a>
     <a href="./wednesday_9_11/task4.html">task 4</a>
+    <hr>
+    <h1>thursday 10-11</h1>
+    <a href="./thursday_10_11/task1.html">task 1</a>
+    <a href="./thursday_10_11/task2.html">task 2</a>
+    <a href="./thursday_10_11/task3.html">task 3</a>
+    <a href="./thursday_10_11/task4.html">task 4</a>
 
 </body>
 </html>
