--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <hr>
     <h1>thursday 10-11</h1>
     <a href="./thursday_10_11/task1.html">task 1</a>
-    <a href="./thursday_10_11/task2.html">task 2</a>
-    <a href="./thursday_10_11/task3.html">task 3</a>
-    <a href="./thursday_10_11/task4.html">task 4</a>
+    <a href="./thursday_10_11/task2.html">Grid</a>
+    <a href="./thursday_10_11/task3.html">Flex</a>
+    <a href="./thursday_10_11/task4.html">Bootstrap</a>
 
 </body>
 </html>
