--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     <a href="./thursday_10_11/task2.html">Grid</a>
     <a href="./thursday_10_11/task3.html">Flex</a>
     <a href="./thursday_10_11/task4.html">Bootstrap</a>
+    <hr>
+    <h1>sunday 13-11</h1>
+    <a href="./sunday_13_11/task1.html">Map</a>
+    <a href="./sunday_13_11/task2.html">Forteach</a>
 
 </body>
 </html>
