--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <hr>
     <h1>sunday 13-11</h1>
     <a href="./sunday_13_11/task1.html">Map</a>
-    <a href="./sunday_13_11/task2.html">Forteach</a>
+    <a href="./sunday_13_11/task2.html">Foreach</a>
 
 </body>
 </html>
