--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
     <h1>sunday 13-11</h1>
     <a href="./sunday_13_11/task1.html">Map</a>
     <a href="./sunday_13_11/task2.html">Foreach</a>
+    <hr>
+    <h1>monday 14-11</h1>
+    <a href="./monday_14_11/task1.html">task 1</a>
+    <a href=""></a>
 
 </body>
 </html>
