--- a/monday_14_11/login.html
+++ b/monday_14_11/login.html
@@ -23,6 +23,22 @@
             width: 50%;
             margin: 0 auto;
         }
+        div {
+            display: none;
+            color: red;
+            font-size: 0.8em;
+            justify-content: center;
+        }
+        #finishMessage{
+            background-color: red;
+            color: aliceblue;
+            border: 4px solid aliceblue;
+            font-size: 3em;
+            padding: 40px;
+            text-align: center;
+            width: 35%;
+            margin: 0 auto;
+        }
     </style>
     
 </head>
@@ -31,11 +47,67 @@
        
         <label>email</label>
         <input type="email" id="Email1" name="Email1" >
+        <div id="emailMessage">*please inert true email</div>
         <label>password </label>
         <input type="password" id="password1" name="password1" >
+        <div id="passMessage">*please inert true password</div>
         <br>
         <br>
         <button type="submit" >log in</button>
-    <!-- <script src="./task1.js"></script> -->
+    </form>
+<div id="finishMessage">hi</div>
+
+<script>
+
+let form2 = document.getElementById(`form`)
+let data =JSON.parse(localStorage.getItem("userData"))
+console.log(data);
+
+form2.addEventListener('submit', login)
+
+function login(e){
+    e.preventDefault()
+
+let aar =data.map (function(ele){
+var mail1 = document.getElementById(`Email1`).value
+var pass_word1 = document.getElementById(`password1`).value
+// var mail = document.getElementById(`Email`).value
+// var pass_word = document.getElementById(`password`).value
+
+if (mail1 === data[data.length-1].Email && pass_word1 === data[data.length-1].password){
+// if (mail1 === ele[ele.length-1].Email && pass_word1 === ele[ele.length-1].password){
+// if (mail1 === ele.Email && pass_word1 === ele.password){
+console.log(`yes`)
+form2.style.display=`none`
+form.style.display=`none`
+let i=1
+if (i=1){
+// document.getElementById(`finishMessage`).style.display=`block`
+let myElement=document.createElement("span")
+myElement.style.cssText=`  
+background-color: red;
+            color: aliceblue;
+            border: 4px solid aliceblue;
+            font-size: 3em;
+            padding: 40px;
+            text-align: center;
+            width: 15%;
+            margin: 100px 100px;
+            display:inline-block`
+let myText =document.createTextNode(`Hi ${data[data.length-1].firstName}`)
+myElement.appendChild(myText);
+document.body.appendChild(myElement);
+console.log(myElement)
+console.log(data[data.length-1].firstName)
+++i}
+}else{
+     document.getElementById(`passMessage`).style.display=`flex`
+    document.getElementById(`emailMessage`).style.display=`flex`
+//  window.location = "./login.html";
+}
+})
+// localStorage.clear()
+}
+</script>
 </body>
 </html>
