--- a/monday_14_11/task1.html
+++ b/monday_14_11/task1.html
@@ -31,7 +31,7 @@
             width: 20%;
             border: 1px solid black;
             margin: 50px auto ;
-            /* display: none; */
+            display: none;
             
         }
         .container1 label,input{
@@ -72,7 +72,7 @@
         <label>password </label>
         <input type="password" id="password" name="password" >
         <label>phone number</label>
-        <input type="number" id="phoneNumber" name="phoneNumber" >
+        <input type="text" id="phoneNumber" name="phoneNumber" >
         <!-- <label>first name</label>
         <input type="text" id="firstName" name="firstName" onchange="setData(name,value)">
         <span style="display: none;">please</span>
@@ -89,7 +89,7 @@
         <button type="submit" id="btn">register</button>
         <!-- <button type="submit" onsubmit="getData()">register</button> -->
     </form>
-    <form class="container1" id="form">
+    <!-- <form class="container1" id="form">
        
         <label>email</label>
         <input type="email" id="Email1" name="Email1" >
@@ -101,7 +101,7 @@
         <br>
         <button type="submit" >log in</button>
     </form>
-<div id="finishMessage">hi</div>
+<div id="finishMessage">hi</div> -->
     <script src="./task1.js"></script>
 </body>
 </html>
