--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1>monday 7-11</h1>
     <a href="./monday_7_11/task1.html">Function challenge</a>
     <hr>
-    <h1>thusday 8-11</h1>
+    <h1>tuesday 8-11</h1>
     <a href="./thusday_8_11/task1.html">Array challenge</a>
     <hr>
     <h1>wednesday 9-11</h1>
@@ -55,6 +55,9 @@
     <hr>
     <h1>monday 14-11</h1>
     <a href="./monday_14_11/task1.html">task 1</a>
+    <a href=""></a>
+    <h1>tuesday 15-11</h1>
+    <a href="./tuesday_15_11/task1.html">task 1</a>
     <a href=""></a>
 
 </body>
